tests/ui/suggestions/dont-suggest-ref/move-into-closure.postedition2021.stderr
error[E0507]: cannot move out of `x.0`, a captured variable in an `Fn` closure
  --> $DIR/move-into-closure.rs:32:15
   |
LL |     let x = X(Y);
   |         - captured outer variable
...
LL |     consume_fn(|| {
   |                -- captured by this `Fn` closure
LL |         let X(_t) = x;
   |               ^^ move occurs because `x.0` has type `Y`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |         let X(&_t) = x;
   |               +

error[E0507]: cannot move out of `e.0`, as `e` is a captured variable in an `Fn` closure
  --> $DIR/move-into-closure.rs:35:34
   |
LL |     let e = Either::One(X(Y));
   |         - captured outer variable
...
LL |     consume_fn(|| {
   |                -- captured by this `Fn` closure
...
LL |         if let Either::One(_t) = e { }
   |                            --    ^
   |                            |
   |                            data moved here
   |                            move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |         if let Either::One(_t) = &e { }
   |                                  +

error[E0507]: cannot move out of `e.0`, as `e` is a captured variable in an `Fn` closure
  --> $DIR/move-into-closure.rs:38:37
   |
LL |     let e = Either::One(X(Y));
   |         - captured outer variable
...
LL |     consume_fn(|| {
   |                -- captured by this `Fn` closure
...
LL |         while let Either::One(_t) = e { }
   |                               --    ^
   |                               |
   |                               data moved here
   |                               move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |         while let Either::One(_t) = &e { }
   |                                     +

error[E0507]: cannot move out of `e.0`, as `e` is a captured variable in an `Fn` closure
  --> $DIR/move-into-closure.rs:41:15
   |
LL |     let e = Either::One(X(Y));
   |         - captured outer variable
...
LL |     consume_fn(|| {
   |                -- captured by this `Fn` closure
...
LL |         match e {
   |               ^
...
LL |             Either::One(_t)
   |                         --
   |                         |
   |                         data moved here
   |                         move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |         match &e {
   |               +

error[E0507]: cannot move out of `e.0`, as `e` is a captured variable in an `Fn` closure
  --> $DIR/move-into-closure.rs:47:15
   |
LL |     let e = Either::One(X(Y));
   |         - captured outer variable
...
LL |     consume_fn(|| {
   |                -- captured by this `Fn` closure
...
LL |         match e {
   |               ^
...
LL |             Either::One(_t) => (),
   |                         --
   |                         |
   |                         data moved here
   |                         move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |         match &e {
   |               +

error[E0507]: cannot move out of `x.0`, a captured variable in an `Fn` closure
  --> $DIR/move-into-closure.rs:55:15
   |
LL |     let x = X(Y);
   |         - captured outer variable
...
LL |     consume_fn(|| {
   |                -- captured by this `Fn` closure
...
LL |         let X(mut _t) = x;
   |               ^^^^^^ move occurs because `x.0` has type `Y`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |         let X(&mut _t) = x;
   |               +

error[E0507]: cannot move out of `em.0`, as `em` is a captured variable in an `Fn` closure
  --> $DIR/move-into-closure.rs:58:38
   |
LL |     let mut em = Either::One(X(Y));
   |         ------ captured outer variable
...
LL |     consume_fn(|| {
   |                -- captured by this `Fn` closure
...
LL |         if let Either::One(mut _t) = em { }
   |                            ------    ^^
   |                            |
   |                            data moved here
   |                            move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |         if let Either::One(mut _t) = &em { }
   |                                      +

error[E0507]: cannot move out of `em.0`, as `em` is a captured variable in an `Fn` closure
  --> $DIR/move-into-closure.rs:61:41
   |
LL |     let mut em = Either::One(X(Y));
   |         ------ captured outer variable
...
LL |     consume_fn(|| {
   |                -- captured by this `Fn` closure
...
LL |         while let Either::One(mut _t) = em { }
   |                               ------    ^^
   |                               |
   |                               data moved here
   |                               move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |         while let Either::One(mut _t) = &em { }
   |                                         +

error[E0507]: cannot move out of `em.0`, as `em` is a captured variable in an `Fn` closure
  --> $DIR/move-into-closure.rs:64:15
   |
LL |     let mut em = Either::One(X(Y));
   |         ------ captured outer variable
...
LL |     consume_fn(|| {
   |                -- captured by this `Fn` closure
...
LL |         match em {
   |               ^^
...
LL |             Either::One(mut _t)
   |                         ------
   |                         |
   |                         data moved here
   |                         move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |         match &em {
   |               +

error[E0507]: cannot move out of `em.0`, as `em` is a captured variable in an `Fn` closure
  --> $DIR/move-into-closure.rs:70:15
   |
LL |     let mut em = Either::One(X(Y));
   |         ------ captured outer variable
...
LL |     consume_fn(|| {
   |                -- captured by this `Fn` closure
...
LL |         match em {
   |               ^^
...
LL |             Either::One(mut _t) => (),
   |                         ------
   |                         |
   |                         data moved here
   |                         move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |         match &em {
   |               +

error[E0507]: cannot move out of `x.0`, a captured variable in an `FnMut` closure
  --> $DIR/move-into-closure.rs:89:15
   |
LL |     let x = X(Y);
   |         - captured outer variable
...
LL |     consume_fnmut(|| {
   |                   -- captured by this `FnMut` closure
LL |         let X(_t) = x;
   |               ^^ move occurs because `x.0` has type `Y`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |         let X(&_t) = x;
   |               +

error[E0507]: cannot move out of `e.0`, as `e` is a captured variable in an `FnMut` closure
  --> $DIR/move-into-closure.rs:92:34
   |
LL |     let e = Either::One(X(Y));
   |         - captured outer variable
...
LL |     consume_fnmut(|| {
   |                   -- captured by this `FnMut` closure
...
LL |         if let Either::One(_t) = e { }
   |                            --    ^
   |                            |
   |                            data moved here
   |                            move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |         if let Either::One(_t) = &e { }
   |                                  +

error[E0507]: cannot move out of `e.0`, as `e` is a captured variable in an `FnMut` closure
  --> $DIR/move-into-closure.rs:95:37
   |
LL |     let e = Either::One(X(Y));
   |         - captured outer variable
...
LL |     consume_fnmut(|| {
   |                   -- captured by this `FnMut` closure
...
LL |         while let Either::One(_t) = e { }
   |                               --    ^
   |                               |
   |                               data moved here
   |                               move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |         while let Either::One(_t) = &e { }
   |                                     +

error[E0507]: cannot move out of `e.0`, as `e` is a captured variable in an `FnMut` closure
  --> $DIR/move-into-closure.rs:98:15
   |
LL |     let e = Either::One(X(Y));
   |         - captured outer variable
...
LL |     consume_fnmut(|| {
   |                   -- captured by this `FnMut` closure
...
LL |         match e {
   |               ^
...
LL |             Either::One(_t)
   |                         --
   |                         |
   |                         data moved here
   |                         move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |         match &e {
   |               +

error[E0507]: cannot move out of `e.0`, as `e` is a captured variable in an `FnMut` closure
  --> $DIR/move-into-closure.rs:104:15
   |
LL |     let e = Either::One(X(Y));
   |         - captured outer variable
...
LL |     consume_fnmut(|| {
   |                   -- captured by this `FnMut` closure
...
LL |         match e {
   |               ^
...
LL |             Either::One(_t) => (),
   |                         --
   |                         |
   |                         data moved here
   |                         move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |         match &e {
   |               +

error[E0507]: cannot move out of `x.0`, a captured variable in an `FnMut` closure
  --> $DIR/move-into-closure.rs:112:15
   |
LL |     let x = X(Y);
   |         - captured outer variable
...
LL |     consume_fnmut(|| {
   |                   -- captured by this `FnMut` closure
...
LL |         let X(mut _t) = x;
   |               ^^^^^^ move occurs because `x.0` has type `Y`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |         let X(&mut _t) = x;
   |               +

error[E0507]: cannot move out of `em.0`, as `em` is a captured variable in an `FnMut` closure
  --> $DIR/move-into-closure.rs:115:38
   |
LL |     let mut em = Either::One(X(Y));
   |         ------ captured outer variable
...
LL |     consume_fnmut(|| {
   |                   -- captured by this `FnMut` closure
...
LL |         if let Either::One(mut _t) = em { }
   |                            ------    ^^
   |                            |
   |                            data moved here
   |                            move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |         if let Either::One(mut _t) = &em { }
   |                                      +

error[E0507]: cannot move out of `em.0`, as `em` is a captured variable in an `FnMut` closure
  --> $DIR/move-into-closure.rs:118:41
   |
LL |     let mut em = Either::One(X(Y));
   |         ------ captured outer variable
...
LL |     consume_fnmut(|| {
   |                   -- captured by this `FnMut` closure
...
LL |         while let Either::One(mut _t) = em { }
   |                               ------    ^^
   |                               |
   |                               data moved here
   |                               move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |         while let Either::One(mut _t) = &em { }
   |                                         +

error[E0507]: cannot move out of `em.0`, as `em` is a captured variable in an `FnMut` closure
  --> $DIR/move-into-closure.rs:121:15
   |
LL |     let mut em = Either::One(X(Y));
   |         ------ captured outer variable
...
LL |     consume_fnmut(|| {
   |                   -- captured by this `FnMut` closure
...
LL |         match em {
   |               ^^
...
LL |             Either::One(mut _t)
   |                         ------
   |                         |
   |                         data moved here
   |                         move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |         match &em {
   |               +

error[E0507]: cannot move out of `em.0`, as `em` is a captured variable in an `FnMut` closure
  --> $DIR/move-into-closure.rs:127:15
   |
LL |     let mut em = Either::One(X(Y));
   |         ------ captured outer variable
...
LL |     consume_fnmut(|| {
   |                   -- captured by this `FnMut` closure
...
LL |         match em {
   |               ^^
...
LL |             Either::One(mut _t) => (),
   |                         ------
   |                         |
   |                         data moved here
   |                         move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |         match &em {
   |               +

error[E0507]: cannot move out of `em.0`, as `em` is a captured variable in an `FnMut` closure
  --> $DIR/move-into-closure.rs:134:15
   |
LL |     let mut em = Either::One(X(Y));
   |         ------ captured outer variable
...
LL |     consume_fnmut(|| {
   |                   -- captured by this `FnMut` closure
...
LL |         match em {
   |               ^^
...
LL |             Either::One(mut _t) => (),
   |                         ------
   |                         |
   |                         data moved here
   |                         move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
LL |         match &em {
   |               +

error: aborting due to 21 previous errors

For more information about this error, try `rustc --explain E0507`.
